--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
           <ul>
             <li>
               <a href="#"
-                ><img src="/icons/linkedin.svg" alt="linkedin-social-media"
+                ><img src="./icons/linkedin.svg" alt="linkedin-social-media"
               /></a>
             </li>
             <li>
               <a href="#"
-                ><img src="/icons/twitter.svg" alt="twitter-social-media"
+                ><img src="./icons/twitter.svg" alt="twitter-social-media"
               /></a>
             </li>
             <li>
               <a href="#"
-                ><img src="/icons/facebook.svg" alt="facebook-social-media"
+                ><img src="./icons/facebook.svg" alt="facebook-social-media"
               /></a>
             </li>
           </ul>
@@ -125,7 +125,7 @@
       <div class="guys">
         <div class="william">
           <img
-            src="/img/pamela-buenrostro-3Vdf7wIJ7ds-unsplash 1.svg"
+            src="./img/pamela-buenrostro-3Vdf7wIJ7ds-unsplash 1.svg"
             alt="William Brown"
           />
           <span id="line11"></span>
@@ -138,7 +138,7 @@
         </div>
         <div class="sofia">
           <img
-            src="/img/mateus-campos-felipe-64sktAOWasI-unsplash 1.svg"
+            src="./img/mateus-campos-felipe-64sktAOWasI-unsplash 1.svg"
             alt="Sofia Lewis"
           />
           <div class="softext">
@@ -149,7 +149,7 @@
         </div>
         <div class="davis">
           <img
-            src="/img/pamela-buenrostro-CSAEI7OGubA-unsplash 1.svg"
+            src="./img/pamela-buenrostro-CSAEI7OGubA-unsplash 1.svg"
             alt="Davis Harris"
           />
           <div class="davtext">
@@ -226,17 +226,17 @@
       <ul>
         <li>
           <a href="#"
-            ><img src="/icons/linkedin.svg" alt="linkedin-social-media"
+            ><img src="./icons/linkedin.svg" alt="linkedin-social-media"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img src="/icons/twitter.svg" alt="twitter-social-media"
+            ><img src="./icons/twitter.svg" alt="twitter-social-media"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img src="/icons/facebook.svg" alt="facebook-social-media"
+            ><img src="./icons/facebook.svg" alt="facebook-social-media"
           /></a>
         </li>
       </ul>
